# gnu_guile-sdl

./: .cvsignore  .gitignore  ANONCVS  AUTHORS  ChangeLog  HACKING  HISTORY  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  acinclude.m4  aclocal-suffix  alive.test  autogen.sh  config.cache  config.status  configure  configure.ac  configure.in  event.c  event.h  gfx.c  gfx.h  guile-sdl.c  guile-sdl.h  guile-sdl.info  guile-sdl.texi  image.c  image.h  libtool  mixer.c  mixer.h  scm.c  scm.h  sdl.scm  sdl.x  ttf.c  (+5 more)
am/: README.MAINTAINERS  common  fspec  guile-sdl.m4  snarfing
build-aux/: guile-sdl.m4  tsar-names.sed
build-aux/guile-baux/: ChangeLog  fs2c  k2c
cov/: .cvsignore  ChangeLog  GNUmakefile  notes.tdt  scan
doc/: .cvsignore  ChangeLog  ChangeLog-cov  Makefile.am  cov  ef-ref.texh  ef-ref.twerp  guile-sdl.texi  kls  mkexcuse  notes.tdt  ref.texh  ref.twerp  scan
doc/k/: ChangeLog  event-key  event-mask  event-type  keysym  overlay
examples/: ChangeLog  README  bustagnu.scm  imagebrowser.scm  read-vpacked.scm  sicp-painter.scm
include/: ChangeLog  argcheck.h  retval.h  sdlcdrom.h  sdlcolor.h  sdlenums.h  sdlevent.h  sdlgfx.h  sdljoystick.h  sdlrect.h  sdlroto.h  sdlsmobs.h  sdlsurface.h  sdlvideo.h  sym.h  wholefns.h
sdl/: ChangeLog  Makefile.am  Makefile.in  gfx.scm  misc-utils.scm  mixer.scm  sdl.scm  simple.scm  ttf.scm
sdl-gfx/: ChangeLog  Makefile.am  sdlgfx.c  sdlgfx.h
sdl-gfx/SDL_gfx/: Makefile.am  Makefile.in  SDL_gfxBlitFunc.c  SDL_gfxBlitFunc.h  SDL_gfxPrimitives.c  SDL_imageFilter.c  SDL_imageFilter.h  SDL_rotozoom.c
sdl-gfx/SDL_gfxPrimitives/: .cvsignore  ChangeLog  Makefile.am  README  SDL_gfxPrimitives.c  SDL_gfxPrimitives.h
sdl-mixer/: .cvsignore  ChangeLog  Makefile  Makefile.am  Makefile.in  libguileSDL_mixer.la  sdlmixer.c  sdlmixer.h  sdlmixer.lo
sdl-ttf/: .cvsignore  ChangeLog  Makefile  Makefile.am  Makefile.in  dummy.texi  libguileSDL_ttf.la  sdlttf.c  sdlttf.h  sdlttf.lo  ttff.fspec
src/: .cvsignore  ChangeLog  Makefile.am  appstate.fs  argcheck.h  b-uv.h  b-values.h  bool.h  convert.c  dummy.texi  evmask.fs  evmaskf.fspec  fnt2c  gperfsup.h  guile-sdl.h  init.fs  initf.fspec  jhpos.fs  kmod.fs  kmodf.fspec  mb.fs  misc-utils.scm  misc.c  overlay.fs  overlayf.fspec  palette.fs  palettef.fspec  retval.h  sdl.c  sdlcdrom.c  sdlcolor.c  sdlenums.c  sdlenums.h  sdlevent.c  sdlgfx.c  sdlgfx.h  sdljoystick.c  sdlmixer.c  sdlmixer.h  sdlrect.c  (+14 more)
src/OLD/: gfx.ChangeLog  ttf.ChangeLog
src/SDL_gfx/: Makefile.am  README  SDL_framerate.c  SDL_framerate.h  SDL_gfxBlitFunc.c  SDL_gfxBlitFunc.h  SDL_gfxPrimitives.c  SDL_gfxPrimitives.h  SDL_gfxPrimitives_font.h  SDL_imageFilter.c  SDL_imageFilter.h  SDL_rotozoom.c  SDL_rotozoom.h
src/SDL_rotozoom/: .cvsignore  COPYING  ChangeLog  Makefile.am  Makefile.in  README  SDL_rotozoom.c  SDL_rotozoom.h
src/k/: Makefile.am  active.kp  alphalim.kp  alphalimold.kp  appstate.kf  cdstate.kp  cdtracktype.kp  evaction.kp  evmask.kf  evstate.kp  evtype.kp  evtypeold.kp  fading.kp  frot.kp  grabmode.kp  init.kf  jhpos.kf  keysym.kp  keysymold.kp  kmod.kf  mb.kf  mbut.kp  overlay.kf  palette.kf  ttf.kf  updn.kp  video.kf
test/: ChangeLog  Makefile.am  README  alive.test  common  cursor.scm  event.scm  fading.scm  gfx.scm  image.scm  leak.scm  mixer.scm  opengl.scm  rect.scm  roto.scm  t99-cov  ttf.scm  zow.in
ugh/: ChangeLog  Makefile.am  README  cdstate.sed  evmask.sed  evtype.sed  init.sed  keysym.sed  kmod.sed  overlay.sed  palette.sed  ttf.sed  video.sed
