## Process this file with Automake to create Makefile.in

## Copyright (C) 2003, 2004, 2005, 2007, 2008, 2009,
##               2011, 2013 Thien-Thi Nguyen
##
## This program is free software; you can redistribute it and/or
## modify it under the terms of the GNU General Public License as
## published by the Free Software Foundation; either version 3 of
## the License, or (at your option) any later version.
##
## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public
## License along with this program; if not, write to the Free
## Software Foundation, Inc., 51 Franklin Street, Fifth Floor,
## Boston, MA  02110-1301  USA

ACLOCAL_AMFLAGS = -I build-aux

SUBDIRS = src doc test ugh

# distribution
as_is_dirs = build-aux/guile-baux

EXTRA_DIST = HISTORY \
	build-aux/guile-sdl.m4 \
	build-aux/sofix \
	build-aux/uninstall-sofixed \
	build-aux/tsar-names.sed \
	$(as_is_dirs)

## Makefile.am ends here
