## Process this file with Automake to create Makefile.in

AUTOMAKE_OPTIONS = gnu

PACKAGE = @PACKAGE@
VERSION = @VERSION@

# The scheme file for bringing in the module
sdlmoduledir = $(datadir)/guile/sdl
sdlmodule_DATA = sdl.scm gfx.scm ttf.scm mixer.scm

EXTRA_DIST = sdl.scm gfx.scm ttf.scm mixer.scm

